[project]
name = "astragraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "neo4j>=6.1.0",
    "pathspec>=1.0.4",
    "pytest>=9.0.3",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
